corrected code spacing

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -5,7 +5,6 @@
   min-width: $calendar-width;
   padding: $calendar-paddings;
   gap: $calendar-gap;
-
   flex-wrap: wrap;
 
   @each $key, $value in $day-of-week {
@@ -32,22 +31,20 @@
 
     @for $day from 1 through 31 {
       &:nth-child(#{$day})::before {
-        content: '#{$day}';
+        content: "#{$day}";
         line-height: $day-height;
         width: $day-width;
         text-align: center;
       }
     }
 
-      transition: all 0.5s;
-
+    transition: all 0.5s;
 
     &:hover {
       background-color: $day-hovered-color;
       transform: translateY(-$day-hovered-shift);
       cursor: pointer;
     }
-
   }
 
   @for $month-end from 28 through 31 {
