--- a/src/styles/util/variables.scss
+++ b/src/styles/util/variables.scss
@@ -9,7 +9,8 @@ $day-hovered-shift: 20px;
 
 $calendar-gap: 1px;
 $calendar-paddings: 10px;
-$calendar-width: (7 * $day-width) + (2 * $calendar-paddings) + (6 * $calendar-gap);
+$calendar-width:
+  (7 * $day-width) + (2 * $calendar-paddings) + (6 * $calendar-gap);
 
 $day-of-week: (
   mon: ($day-width + $calendar-gap) * 0,
